--- a/primevideo.html
+++ b/primevideo.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Amazon Prime</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="../AmazonPrime/primevideo.css">
+    <link rel="stylesheet" href="../PrimeVideo/primevideo.css">
 </head>
 </head>
 <body>
@@ -95,7 +95,7 @@
     </div>
     <div class="div7">
         <div class="foot1">
-            <img src="../primeimages/amazonlogo.jpg">
+            <img src="../PrimeVideo/primeimages/amazonlogo.jpg">
         </div>
         <div class="foot2">
             <span class="span1"><a>Terms and Privacy</a>
